<resources>
    <string name="app_name">Repgate Sales Representative</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="success_title">Success</string>
    <string name="confirm_title">Confirm</string>
    <string name="warning_title">Warning</string>
    <string name="error_title">Error</string>
    <string name="alarm_title">Alarm</string>
    <string name="are_you_exit">Are you sure exit?</string>
    <string name="are_you_logout">Are you sure to logout?</string>
    <string name="are_you_sure_delete">Are you sure to delete this?</string>
    <string name="select_lamp">Please select a lamp that you want to configure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Your Password ?</string>

    <!-- Main Page -->
    <string name="join">Join</string>
    <string name="healthcare_providers">My Offices</string>
    <string name="messages_shares">My Messages</string>
    <string name="requests">My Requests</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="tutorials">Tutorials</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_message">Create Message</string>
    <string name="create_request">Create Request</string>
    <string name="send_message">Send Message</string>
    <string name="send_request">Send Request</string>
    <string name="attach_pdf">Attach Pdf</string>
    <string name="attach_video">Attach Media</string>

    <!-- Profile Page -->
    <string name="save">Save</string>
    <string name="username">Name</string>
    <string name="products">Products:</string>

    <!-- Request Page -->
    <string name="request_type_prompt">Choose a Type</string>
    <string-array name="request_type_arrays">
        <item>Lunch</item>
        <item>Appointment</item>
    </string-array>

    <string-array name="request_action_arrays">
        <item>Init</item>
        <item>Confirm</item>
        <item>Change</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="request_action_arrays1">
        <item>Change</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="payment_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="payment_year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <!-- Heathcare Provider Page -->
    <string name="physicians">Physicians</string>
    <string name="physician_assistants">Physicians Assistants</string>
    <string name="nurse_practioners">Nuser Practioners</string>
    <string name="officers">Offices</string>
    <string name="my_officers">My Offices</string>
    <string name="sale_representatives">Sale Representatives</string>
    <string name="company">Company</string>
    <string name="string_picker_dialog_title">Select a gender</string>

    <!-- Error messages -->
    <string name="input_name_msg">Please input user name.</string>
    <string name="input_email_msg">Please input email address.</string>
    <string name="input_password_msg">Please input password.</string>
    <string name="invalid_email_msg">Invalid Email address.</string>
    <string name="min_length_password">Password must be large at least than 6 characters. </string>
    <string name="network_error_msg">Please make sure your internet connection.</string>
    <string name="msg_allow_block_error_msg">This user has blocked all messages, please contact the office.</string>
    <string name="req_allow_block_error_msg">This user has blocked all requests, please contact the office.</string>
    <string name="service_error_msg">This service is not available now.</string>
    <string name="input_code_msg">Please input doctor code.</string>
    <string name="input_card_number_msg">Please input Card number.</string>
    <string name="input_cvc_msg">Please input CVC.</string>

    <string name="input_msg_title">Please input message title.</string>
    <string name="input_msg_receiver">Please input message receiver.</string>
    <string name="input_msg_body">Please input message contents.</string>

    <string name="input_req_title">Please input request title.</string>
    <string name="input_req_receiver">Please input request receiver.</string>
    <string name="input_req_datetime">Please input request datetime.</string>

    <!-- Payment -->
    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="cardNumber">Card Number</string>
    <string name="cvc">CVC</string>

    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
    <string name="title_activity_login1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_messaging_tutorial">Have a video visit with a board-certified physician, psychologist or more from the comfort of home! It’s free to sign up - with no subscription fees. Doctor On Demand doctors and psychologists are rigorously screened, board certified, and practice in your state.</string>

</resources>
