<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/contentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo_large"
            android:scaleType="centerCrop"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_centerHorizontal="true"
            android:text="Sales Representative"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtLogo"
            android:maxLength="50"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edtPasswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edtEmail"
            android:maxLength="50"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentLogin">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            fbutton:buttonColor="@color/btn_color"
            fbutton:shadowColor="@color/btn_shadow_color"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="2dp"
            fbutton:cornerRadius="5dp"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="@mipmap/psychology_photo_home"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            fbutton:buttonColor="@color/btn_color"
            fbutton:shadowColor="@color/btn_shadow_color"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="2dp"
            fbutton:cornerRadius="5dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="@mipmap/psychology_photo_home"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/btnLogin"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentButton"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Remember Me"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:paddingLeft="5dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

</RelativeLayout>