<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.repgate.sales.ui.activities.SignUpActivity">

    <RelativeLayout
        android:id="@+id/contentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo_large"
            android:scaleType="centerCrop"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_centerHorizontal="true"
            android:text="Sales Representative"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>


        <LinearLayout
            android:id="@+id/contentUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLogo"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imgLogo"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentUserName"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentEmail"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edtPasswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionGo"/>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentLogin"
        android:layout_marginTop="20dp">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            fbutton:buttonColor="@color/btn_color"
            fbutton:shadowColor="@color/btn_shadow_color"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="2dp"
            fbutton:cornerRadius="5dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="@mipmap/psychology_photo_home"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</RelativeLayout>
